--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "apollo-boost": "^0.4.9",
     "axios": "0.26.1",
     "graphql-tag": "^2.12.6",
+    "i18next": "^21.8.5",
+    "i18next-browser-languagedetector": "^6.1.4",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "lottie-react": "2.2.1",
@@ -28,6 +30,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^16.12.0",
     "react-hook-form": "7.29.0",
+    "react-i18next": "^11.16.9",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-nice-avatar": "^1.2.4",
