--- a/server/package.json
+++ b/server/package.json
@@ -89,7 +89,7 @@
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "6.2.2",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "27.1.2",
     "ts-loader": "^9.2.3",
     "ts-node": "10.7.0",
     "tsconfig-paths": "^3.10.1",
