--- a/server/package.json
+++ b/server/package.json
@@ -82,7 +82,7 @@
     "eslint": "8.13.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "27.5.1",
+    "jest": "^27.5.1",
     "mongodb-memory-server": "^8.5.2",
     "prettier": "2.6.2",
     "prisma-nestjs-graphql": "^15.2.2",
