--- a/server/package.json
+++ b/server/package.json
@@ -82,14 +82,14 @@
     "eslint": "8.13.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.5.1",
+    "jest": "27.5.1",
     "mongodb-memory-server": "^8.5.2",
     "prettier": "2.6.2",
     "prisma-nestjs-graphql": "^15.2.2",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "6.2.2",
-    "ts-jest": "27.1.2",
+    "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.3",
     "ts-node": "10.7.0",
     "tsconfig-paths": "^3.10.1",
