--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "alasql": "^1.7.3",
     "apollo-server-express": "^3.6.7",
     "bcryptjs": "^2.4.3",
+    "casl": "^1.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
